--- a/exercice-1-start.html
+++ b/exercice-1-start.html
@@ -5,7 +5,7 @@
     <style>
 
       body{
-        margin: 0;
+        margin: 0 10em 0 10em;
         padding: 0;
         background: pink;
       }
@@ -13,17 +13,23 @@
       .container {
         height: 100vh;
         background: greenyellow;
-
+        display: flex;
+        flex-direction: column;
       }
 
       header,
       footer {
+        height: 100px;
         background: grey;
       }
 
       main {
         background: grey;
+        display: flex;
+        flex-grow: 1;
+        margin: 1em 0 1em 0;
       }
+
  
     </style>
   </head>
