--- a/exercice-1-start.html
+++ b/exercice-1-start.html
@@ -15,6 +15,8 @@
         background: greenyellow;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        gap: 1em;
       }
 
       header,
@@ -25,9 +27,7 @@
 
       main {
         background: grey;
-        display: flex;
         flex-grow: 1;
-        margin: 1em 0 1em 0;
       }
 
  
