--- a/exercice-1-start.html
+++ b/exercice-1-start.html
@@ -5,8 +5,8 @@
     <style>
 
       body{
-        margin: 0 10em 0 10em;
-        padding: 0;
+        margin: 0;
+        padding: 0 10em 0 10em;
         background: pink;
       }
   
