--- a/exercice-2-start.html
+++ b/exercice-2-start.html
@@ -12,20 +12,33 @@
       .main {
         height: 100vh;
         background: #25384B;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 3em;
+        padding: 0 3em 0 3em;
       }
 
       .left-section {
         background: #A3CFCC;
-      
+        display: flex;
+        flex-grow: 2;
       }
 
       .right-section {
         background: #F7CFB6;
-       
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        padding: 1em;
+        justify-content: space-evenly;
+        gap: 1em;
       }
 
       .item {
         background: #86C2DE;
+        display: flex;
+        flex-grow: 1;
       }
  
     </style>
